force-app/main/default/objects/Consent_Transaction__c/Consent_Transaction__c.object-meta.xml
<CustomObject>
    <description>Tracks the instances where a Constituent (Lead or Contact / Person Account) opts in or out of marketing communications, for regulatory compliance and honoring privacy preferences.</description>
    <label>Consent Transaction</label>
    <nameField>
        <displayFormat>CT-{00000000}</displayFormat>
        <label>Consent Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consent Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>