force-app/main/default/objects/Consent_Transaction__c/fields/Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member__c</fullName>
    <description>If applicable, the Campaign Member to which this relates. Required to be a text field, since you cannot create lookups to Campaign Members in Salesforce.</description>
    <inlineHelpText>If applicable, the Campaign Member to which this relates.</inlineHelpText>
    <label>Campaign Member</label>
    <length>18</length>
    <type>Text</type>
</CustomField>