force-app/main/default/objects/Consent_Transaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact to which this Consent Transaction relates.</description>
    <inlineHelpText>The Contact to which this Consent Transaction relates.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consent Transactions</relationshipLabel>
    <relationshipName>Consent_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>