force-app/main/default/objects/Consent_Transaction__c/fields/Date_Time_of_Consent__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Consent__c</fullName>
    <description>Indicates the Date and Time this Consent Transaction occurred.</description>
    <inlineHelpText>Indicates the Date and Time this Consent Transaction occurred.</inlineHelpText>
    <label>Date Time of Consent</label>
    <type>DateTime</type>
</CustomField>