force-app/main/default/objects/Consent_Transaction__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead to which this Consent Transaction relates.</description>
    <inlineHelpText>The Lead to which this Consent Transaction relates.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Consent Transactions</relationshipLabel>
    <relationshipName>Consent_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>