force-app/main/default/objects/Consent_Transaction__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Typically for opting out (unsubscribing), indicates a reason for the unsubscribe.</description>
    <inlineHelpText>Typically for opting out (unsubscribing), indicates a reason for the unsubscribe.</inlineHelpText>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>