force-app/main/default/objects/Consent_Transaction__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Indicates if the transaction is specific to a Campaign or Global.</description>
    <inlineHelpText>Indicates if the transaction is specific to a Campaign or Global.</inlineHelpText>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>