force-app/main/default/objects/Consent_Transaction__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Indicates the general source where this Consent Transaction originated.</description>
    <inlineHelpText>Indicates the general source where this Consent Transaction originated.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
            <value>
                <fullName>Subscriber</fullName>
            </value>
            <value>
                <fullName>Mobile Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>