force-app/main/default/objects/Consent_Transaction__c/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <description>If applicable, the link that the subscriber went to opt-in or opt-out of marketing.</description>
    <inlineHelpText>If applicable, the link that the subscriber went to opt-in or opt-out of marketing.</inlineHelpText>
    <label>Source URL</label>
    <type>Url</type>
</CustomField>