force-app/main/default/objects/Consent_Transaction__c/fields/Type_of_Consent__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Consent__c</fullName>
    <description>Indicates the nature of the consent - if someone opted in or out.</description>
    <inlineHelpText>Indicates the nature of the consent - if someone opted in or out.</inlineHelpText>
    <label>Type of Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-in</fullName>
            </value>
            <value>
                <fullName>Opt-out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>