force-app/main/default/objects/Consent_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>Date_Time_of_Consent__c</columns>
    <columns>Type_of_Consent__c</columns>
    <columns>Scope__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>